--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "",
   "private": true,
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/rohit-basu-jdas/plat-lui-onboarding-service.git"
-   }, 
+    "type": "git",
+    "url": "https://github.com/rohit-basu-jdas/plat-lui-onboarding-service.git"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "^6.7.2",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "nestjs-pino": "^1.1.3",
     "passport": "^0.4.1",
     "passport-azure-ad": "^4.2.1",
     "passport-local": "^1.0.0",
