--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "test:e2e": "jest --config ./apps/api/test/jest-e2e.json"
   },
   "dependencies": {
+    "@grpc/proto-loader": "^0.5.3",
     "@nestjs/common": "^6.7.2",
     "@nestjs/config": "^0.4.0",
     "@nestjs/core": "^6.11.6",
+    "@nestjs/microservices": "^7.0.7",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^6.7.2",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "grpc": "^1.24.2",
     "nestjs-pino": "^1.1.3",
     "passport": "^0.4.1",
     "passport-azure-ad": "^4.2.1",
