--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "@nestjs/common": "^6.7.2",
     "@nestjs/config": "^0.4.0",
     "@nestjs/core": "^6.11.6",
+    "@nestjs/mongoose": "^6.4.0",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^6.7.2",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "mongoose": "^5.9.7",
+    "mongoose-paginate-v2": "^1.3.9",
     "nestjs-pino": "^1.1.3",
     "passport": "^0.4.1",
     "passport-azure-ad": "^4.2.1",
